# ipfromwebpage

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.md  LICENSE.md  README.md  ip-from-webpage.py  ipfromwebpage.py  ipfromwebpage_tests.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test_ipfromwebpage.py
.circleci/: config.yml
ipfromwebpage/: __init__.py  ipfromwebpage.py
testfiles/: test_html.html  test_html_expected.txt
tests/: test_ipfromwebpage.py
tests/testfiles/: test_functional_expected.txt  test_html.html  test_html_empty.html
