[tool.poetry]
name = "ipfromwebpage"
version = "0.9.2"
description = "Takes a webpage and outputs all ip addresses it finds"
authors = ["Jay Shepherd <shepherdjay@users.noreply.github.com>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/shepherdjay/ip-from-webpage'
homepage = 'https://github.com/shepherdjay/ip-from-webpage'
keywords = ['ipfromwebpage']
classifiers = [
        'Development Status :: 4 - Beta',
        'Environment :: Console',
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3.4',
        'Programming Language :: Python :: 3.5',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
]

[tool.poetry.dependencies]
python = ">=3.4"
beautifulsoup4 = "^4.4"
netaddr = "0.7.18"

[tool.poetry.dev-dependencies]
pytest = "^3.9"
pytest-cov = "^2.6"

[tool.poetry.scripts]
ipfromwebpage = 'ipfromwebpage:entrypoint'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
