[tool.poetry]
name = "ipfromwebpage"
version = "1.2.0"
description = "Takes a webpage and outputs all ip addresses it finds"
authors = ["Jay Shepherd <shepherdjay@users.noreply.github.com>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/shepherdjay/ip-from-webpage'
homepage = 'https://github.com/shepherdjay/ip-from-webpage'
keywords = ['ipfromwebpage']
classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Environment :: Console',
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
]

[tool.poetry.dependencies]
python = ">=3.9"
beautifulsoup4 = "^4.4"
netaddr = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
pytest-cov = "*"

[tool.poetry.scripts]
ipfromwebpage = 'ipfromwebpage:entrypoint'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
